update emp payment method

--- a/resources/templates/main.html
+++ b/resources/templates/main.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<title>家庭经济管理系统</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta conte<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+		<!-- <meta content <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">> -->
 
 		<html lang="en">
 			<head>
@@ -15,7 +15,7 @@
 				<meta content="Coderthemes" name="author" />
 				<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 				<!-- App favicon -->
-				<link rel="shortcut icon" href="assets/images/favicon.ico">
+				<link rel="shortcut icon" href="/resources/assets/images/favicon.ico">
 				<script type="text/javascript">
 					// function canuse(){
 					// 	var phonenumber = <%=(String)session.getAttribute("user") %>
@@ -29,9 +29,9 @@
 					//
 				</script>
 				<!-- App css -->
-				<link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-				<link href="../css/icons.min.css" rel="stylesheet" type="text/css" />
-				<link href="../css/app.min.css" rel="stylesheet" type="text/css" />
+				<link href="/resources/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+				<link href="/resources/css/icons.min.css" rel="stylesheet" type="text/css" />
+				<link href="/resources/css/app.min.css" rel="stylesheet" type="text/css" />
 				<style type="text/css">
 					.card-body > ul {
 						list-style: none;
@@ -60,10 +60,10 @@
 					<!-- LOGO -->
 					<a href="#" class="logo text-center mb-4">
 						<span class="logo-lg">
-							<img src="../assets/images/logo.png" alt="" height="50">
+							<img src="/resources/assets/images/logo.png" alt="" height="50">
 						</span>
 						<span class="logo-sm">
-							<img src="../assets/images/logo-sm.png" alt="" height="24">
+							<img src="/resources/assets/images/logo-sm.png" alt="" height="24">
 						</span>
 					</a>
 
@@ -159,9 +159,9 @@
 							<li class="dropdown notification-list">
 								<a class="nav-link dropdown-toggle nav-user mr-0" data-toggle="dropdown" href="#" role="button" aria-haspopup="false"
 								 aria-expanded="false">
-									<img src="../assets/images/users/avatar-1.jpg" alt="user-image" class="rounded-circle">
+									<img src="/resources/assets/images/users/avatar-1.jpg" alt="user-image" class="rounded-circle">
 									<small class="pro-user-name ml-1">
-										用户名
+										{{.showUsername}}
 									</small>
 								</a>
 								<div class="dropdown-menu dropdown-menu-right dropdown-menu-animated profile-dropdown ">
@@ -238,16 +238,32 @@
 								<!-- <div class="card"> -->
 									<div class="card-body" id="banner">
 										<ul>
-											<li><img src="../assets/images/banner1.jpg" /></li>
-											<li><img src="../assets/images/banner2.jpg" /></li>
-											<li><img src="../assets/images/banner3.jpg" /></li>
-											<li><img src="../assets/images/banner4.jpg" /></li>
-											<li><img src="../assets/images/banner5.jpg" /></li>
-											<li><img src="../assets/images/banner6.jpg" /></li>
+											<li><img src="/resources/assets/images/banner2.jpg" /></li>
+											<li><img src="/resources/assets/images/banner3.jpg" /></li>
+											<li><img src="/resources/assets/images/banner4.jpg" /></li>
+											<li><img src="/resources/assets/images/banner1.jpg" /></li>
+											<li><img src="/resources/assets/images/banner5.jpg" /></li>
+											<li><img src="/resources/assets/images/banner6.jpg" /></li>
 										</ul>
 									</div>
 								</div>
 							</div>
+							<form action="/updatePay" method="post">
+								<div>
+									<label for="updatePay">Update Payment Method</label>
+									<select name="updatePay" id="updatePay">
+										<option value="pick_up">pickup</option>
+										<option value="mail">mail</option>
+										<option value="deposit">deposit</option>
+									</select>
+
+									<p></p>
+
+									<button type="submit">
+										submit
+									</button>
+								</div>
+							</form>
 						</div>
 						<script type="application/javascript">
 							main();
@@ -349,15 +365,15 @@
 
 
 				<!-- App js -->
-				<script src="../js/vendor.min.js"></script>
-				<script src="../js/app.min.js"></script>
+				<script src="/resources/js/vendor.min.js"></script>
+				<script src="/resources/js/app.min.js"></script>
 
 				<!-- Plugins js -->
-				<script src="../js/vendor/Chart.bundle.js"></script>
-				<script src="../js/vendor/jquery.sparkline.min.js"></script>
-				<script src="../js/vendor/jquery.knob.min.js"></script>
+				<script src="/resources/js/vendor/Chart.bundle.js"></script>
+				<script src="/resources/js/vendor/jquery.sparkline.min.js"></script>
+				<script src="/resources/js/vendor/jquery.knob.min.js"></script>
 
-				<script src="../js/pages/dashboard.init.js"></script>
+				<script src="/resources/js/pages/dashboard.init.js"></script>
 				<!-- record map -->
 
 	</body>
