--- a/resources/templates/login.html
+++ b/resources/templates/login.html
@@ -15,20 +15,16 @@
 
     <!-- App css -->
     <link
-      href="/assets/templates/css/bootstrap.min.css"
+      href="/resources/css/bootstrap.min.css"
       rel="stylesheet"
       type="text/css"
     />
     <link
-      href="/assets/templates/css/icons.min.css"
+      href="/resources/css/icons.min.css"
       rel="stylesheet"
       type="text/css"
     />
-    <link
-      href="/assets/templates/css/app.min.css"
-      rel="stylesheet"
-      type="text/css"
-    />
+    <link href="/resources/css/app.min.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript"></script>
   </head>
 
@@ -43,7 +39,7 @@
                   <a href="index.html">
                     <span
                       ><img
-                        src="/assets/templates/assets/images/logo.png"
+                        src="/resources/assets/images/logo.png"
                         alt=""
                         height="22"
                     /></span>
@@ -105,7 +101,7 @@
     <!-- end page -->
 
     <!-- App js -->
-    <script src="/assets/templates/js/vendor.min.js"></script>
-    <script src="/assets/templates/js/app.min.js"></script>
+    <script src="/resources/js/vendor.min.js"></script>
+    <script src="/resources/js/app.min.js"></script>
   </body>
 </html>
