--- a/resources/templates/add_employee.html
+++ b/resources/templates/add_employee.html
@@ -6,64 +6,55 @@
 		<link rel="stylesheet" href="../layui/css/layui.css">
 		<script src="../layui/layui.js"></script>
 		<script type="text/javascript">
-			// function canuse() {
-			// 	var phonenumber = < %= (String) session.getAttribute("user") % >
-			// 		if (phonenumber == "15809872335") {
-			// 			return true;
-			// 		} else {
-			// 			alert("对不起，只有管理员可以使用该功能！");
-			// 			return false;
-			// 		}
+			// function canuse(){
+			// 	var phonenumber = <%=(String)session.getAttribute("user") %>
+			// 	if(phonenumber=="15809872335"){
+			// 		return true;
+			// 	}else{
+			// 		alert("对不起，只有管理员可以使用该功能！");
+			// 		return false;
+			// 	}
 			// }
 			layui.use('laydate', function() {
 				var laydate = layui.laydate;
 
 				//执行一个laydate实例
 				laydate.render({
-					elem: '#st' //指定元素
-				});
-			});
-			layui.use('laydate', function() {
-				var laydate = layui.laydate;
-
-				//执行一个laydate实例
-				laydate.render({
-					elem: '#et' //指定元素
+					elem: '#ex_time' //指定元素
 				});
 			});
 
-			function deletes(root) {
-				var flag = confirm("【确认删除？】");
-				if (flag) {
+			function back() {
+				window.history.go(-1);
+			}
 
-					var outid = root.nextElementSibling.value;
-					var xml = new XMLHttpRequest();
-					xml.open("get", "DeleteExpenseServlet?eid=" + outid, true);
-					xml.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-					xml.send(null);
-					xml.onreadystatechange = function() {
-						if (xml.readyState == 4) {
-							alert("【删除成功】");
-							location.href = "DisplayExpenseServlet";
-						}
-					}
+			function check() {
+				var phones = document.getElementById("phone").value;
+				var ex_amounts = document.getElementById("ex_amount").value;
+				var ex_times = document.getElementById("ex_time").value;
+				if (phones == "" || ex_amounts == "" || ex_times == "") {
+					alert("信息填充不全！");
+					return false;
 				}
+				if (isNaN(phones) || phones.length != 11) {
+					alert("手机号输入有误！");
+					return false;
+				}
+				if (isNaN(ex_amounts)) {
+					alert("支出金额输入有误！");
+					return false;
+				}
+				return true;
 			}
 		</script>
-		<title>维护订单信息</title>
+		<meta charset="utf-8" />
+		<title>增加员工信息</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta content="A fully featured admin theme which can be used to build CRM, CMS, etc." name="description" />
 		<meta content="Coderthemes" name="author" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<!-- App favicon -->
 		<link rel="shortcut icon" href="../assets/images/favicon.ico">
-
-		<!-- third party css -->
-		<link href="../css/vendor/dataTables.bootstrap4.css" rel="stylesheet" type="text/css" />
-		<link href="../css/vendor/responsive.bootstrap4.css" rel="stylesheet" type="text/css" />
-		<link href="../css/vendor/buttons.bootstrap4.css" rel="stylesheet" type="text/css" />
-		<link href="../css/vendor/select.bootstrap4.css" rel="stylesheet" type="text/css" />
-		<!-- third party css end -->
 
 		<!-- App css -->
 		<link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css" />
@@ -173,9 +164,6 @@
 					<!-- Topbar Start -->
 					<div class="navbar-custom">
 						<ul class="list-unstyled topbar-right-menu float-right mb-0">
-
-
-
 							<li class="dropdown notification-list">
 								<a class="nav-link dropdown-toggle nav-user mr-0" data-toggle="dropdown" href="#"
 									role="button" aria-haspopup="false" aria-expanded="false">
@@ -190,7 +178,6 @@
 									<div class="dropdown-header noti-title">
 										<h6 class="text-overflow m-0">Welcome !</h6>
 									</div>
-
 									<!-- item-->
 									<a href="javascript:void(0);" class="dropdown-item notify-item">
 										<i class="fe-user"></i>
@@ -238,130 +225,116 @@
 					<!-- end Topbar -->
 					<!-- Start Content-->
 					<div class="container-fluid">
-						<div class="row">
-							<div class="col-12">
-								<div class="card">
-									<div class="card-body">
-										<h4 class="header-title">
-											<过往订单查询>
-										</h4>
-										<p class="text-muted font-13 mb-4">
-										<form action="SearchExpenseServlet" method="post">
+						<form action="addExpenseServlet" method="post">
+							<table class="layui-table">
+								<tr>
+									<th colspan="2" align="center">
+										<span style="text-align:center">【新增员工信息】</span>
+									</th>
+								</tr>
+								<tr>
+									<th width=200px>
+										<span>姓名</span>
+									</th>
+									<td align="center">
+										<input type="text" name="phone" id="phone" class="layui-input">
+									</td>
+								</tr>
+								<tr>
+									<th>
+										<span>密码 </span>
+									</th>
+									<td align="center">
+										<input type="text" name="ex_amount" id="ex_amount" class="layui-input">
+									</td>
+								</tr>
+								<tr>
+									<th>
+										<span>联系方式</span>
+									</th>
+									<td align="center">
+										<input type="text" name="sc" id="sc" class="layui-input">
+									</td>
+								</tr>
+								<tr>
+									<th>
+										<span>邮寄地址</span>
+									</th>
+									<td align="center">
+										<input type="text" name="cost" id="cost" class="layui-input">
+									</td>
+								</tr>
+								<tr>
+									<th>
+										<span>职工类型</span>
+									</th>
+									<td align="center">
+										<span>
+											<select name="type" data-plugin="customselect">
+												<option value="hourly">hourly</option>
+												<option value="salaried">salaried </option>
+												<option value="commission">commission</option>
+											</select>
+										</span>
+									</td>
 
-											<span>客户联系方式</span>
+								</tr>
+								<tr>
+									<th>
+										<span>标准薪资</span>
+									</th>
+									<td align="center">
+										<input type="text" name="sc" id="sc" class="layui-input">
+									</td>
+								</tr>
+								<tr>
+									<th>
+										<span>支付方式</span>
+									</th>
+									<td align="center">
+										<span>
+											<select name="type" data-plugin="customselect">
+												<option value="paycheck">paycheck</option>
+												<option value="mail">mail </option>
+												<option value="deposit">deposit</option>
+											</select>
+										</span>
+									</td>
+								</tr>
+								<tr>
+									<th>
+										<span>社保账号</span>
+									</th>
+									<td align="center">
+										<input type="text" name="sc" id="sc" class="layui-input">
+									</td>
+								</tr>
+								<tr>
+									<th>
+										<span>工作时限</span>
+									</th>
+									<td align="center">
+										<input type="text" name="sc" id="sc" class="layui-input">
+									</td>
+								</tr>
+								
 
-											<br>
-											<span><input type="text" name="phonenumber" id="pn"
-													class="form-control"></span>
-
-											<br>
-											<span>商品类别</span>
-
-											<br>
-
-											<span>
-												<select name="kind" data-plugin="customselect">
-													<option value="null">全部</option>
-													<option value="服装">服装</option>
-													<option value="运动">运动</option>
-													<option value="文具">文具</option>
-													<option value="家电">家电</option>
-												</select>
-											</span>
-
-											<br>
-											<br>
-											<span>开始时间</span>
-
-											<br>
-											<span><input type="text" name="starttime" id="st" placeholder="YYYY-MM-DD"
-													class="form-control"></span>
-
-											<br>
-											<span>截止时间</span>
-
-											<br>
-											<span><input type="text" name="endtime" id="et" placeholder="YYYY-MM-DD"
-													class="form-control"></span>
-
-											<br>
-											<span><input type="submit" value="查询"
-													class="btn btn-block btn-primary"></span>
-											<br>
-										</form>
-										</p>
-
-										<table class="layui-table">
-											<thead>
-
-												<tr>
-													<!-- <th>姓名</th> -->
-													<th>客户联系方式</th>
-													<th>客户地址</th>
-													<th>商品名称</th>
-													<th>花费金额</th>
-													<th>日期</th>
-													<th>订单状态</th>
-													<th>操作</th>
-												</tr>
-											</thead>
-											<tbody>
-												<c:choose>
-													<c:when test="${alist=='[]'}">
-													</c:when>
-													<c:otherwise>
-														<c:forEach items="${alist}" var="out">
-															<form action="GetExpenseByID" method="post">
-																<!-- 默认显示最近一条，输出要替换成Golang提取数据的方式 -->
-																<tr>
-																	<td>
-																		<span>${out.name}</span>
-
-																	</td>
-																	<td>
-																		<span>${out.phone}</span>
-																	</td>
-																	<td>
-																		<span>${out.ex_amount}</span>
-																	</td>
-																	<td>
-																		<span>${out.kind}</span>
-																	</td>
-																	<td>
-																		<span>${out.ex_time}</span>
-																	</td>
-																	<td>
-																		<span>${out.ex_note}</span>
-																	</td>
-																	<td>
-																		<input type="submit" value="修改"
-																			class="btn btn-primary btn-sm">
-																		<input type="button" value="删除"
-																			class="btn btn-danger btn-sm"
-																			onclick="deletes(this)">
-																		<input type="hidden" name="eid"
-																			value="${out.eid}" id="eid">
-																	</td>
-																</tr>
-															</form>
-														</c:forEach>
-													</c:otherwise>
-												</c:choose>
-											</tbody>
-										</table>
-
-										<div>
-											<a href="addoutput.jsp">
-												<i class="layui-icon layui-icon-addition"></i>
-											</a>
-										</div>
-
-									</div> <!-- end card body-->
-								</div> <!-- end card -->
-							</div><!-- end col-->
-						</div>
-						<!-- end row-->
-
+								<tr>
+									<td colspan="2">
+										<input type="submit" value="确认" id="makeadd" class="btn btn-success"
+											onclick="return check()">
+										&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+										&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+										&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+										&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+										&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+										&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+										<input type="button" value="取消" id="disadd" class="btn btn-danger"
+											onclick="back()">
+									</td>
+								</tr>
+							</table>
+						</form>
 
 
 					</div> <!-- container -->
@@ -383,22 +356,11 @@
 		<script src="../js/vendor.min.js"></script>
 		<script src="../js/app.min.js"></script>
 
-		<!-- third party js -->
-		<script src="../js/vendor/jquery.dataTables.js"></script>
-		<script src="../js/vendor/dataTables.bootstrap4.js"></script>
-		<script src="../js/vendor/dataTables.responsive.min.js"></script>
-		<script src="../js/vendor/responsive.bootstrap4.min.js"></script>
-		<script src="../js/vendor/dataTables.buttons.min.js"></script>
-		<script src="../js/vendor/buttons.bootstrap4.min.js"></script>
-		<script src="../js/vendor/buttons.html5.min.js"></script>
-		<script src="../js/vendor/buttons.flash.min.js"></script>
-		<script src="../js/vendor/buttons.print.min.js"></script>
-		<script src="../js/vendor/dataTables.keyTable.min.js"></script>
-		<script src="../js/vendor/dataTables.select.min.js"></script>
-		<!-- third party js ends -->
+		<!-- Plugins js -->
+		<script src="../js/vendor/Chart.bundle.js"></script>
+		<script src="../js/vendor/jquery.sparkline.min.js"></script>
+		<script src="../js/vendor/jquery.knob.min.js"></script>
 
-		<!-- demo app -->
-		<script src="../js/pages/datatables.init.js"></script>
-		<!-- end demo js-->
+		<script src="../js/pages/dashboard.init.js"></script>
 	</body>
 </html>
