--- a/resources/templates/admin_report.html
+++ b/resources/templates/admin_report.html
@@ -6,15 +6,15 @@
 		<link rel="stylesheet" href="../layui/css/layui.css">
 		<script src="../layui/layui.js"></script>
 		<script type="text/javascript">
-			// function canuse() {
-			// 	var phonenumber = < %= (String) session.getAttribute("user") % >
-			// 		if (phonenumber == "15809872335") {
-			// 			return true;
-			// 		} else {
-			// 			alert("对不起，只有管理员可以使用该功能！");
-			// 			return false;
-			// 		}
-			// }
+			function canuse() {
+				var phonenumber = < %= (String) session.getAttribute("user") % >
+					if (phonenumber == "15809872335") {
+						return true;
+					} else {
+						alert("对不起，只有管理员可以使用该功能！");
+						return false;
+					}
+			}
 			layui.use('laydate', function() {
 				var laydate = layui.laydate;
 
@@ -23,13 +23,12 @@
 					elem: '#st' //指定元素
 				});
 			});
-			layui.use('laydate', function() {
-				var laydate = layui.laydate;
+			var laydate = layui.laydate;
 
-				//执行一个laydate实例
-				laydate.render({
-					elem: '#et' //指定元素
-				});
+			//执行一个laydate实例
+			laydate.render({
+			elem: '#et' //指定元素
+			});
 			});
 
 			function deletes(root) {
@@ -50,7 +49,7 @@
 				}
 			}
 		</script>
-		<title>维护订单信息</title>
+		<title>管理员行政报告</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta content="A fully featured admin theme which can be used to build CRM, CMS, etc." name="description" />
 		<meta content="Coderthemes" name="author" />
@@ -76,9 +75,7 @@
 
 			<!-- ========== Left Sidebar Start ========== -->
 			<div class="left-side-menu">
-
 				<div class="slimscroll-menu">
-
 					<!-- LOGO -->
 					<a href="MainServlet" class="logo text-center mb-4">
 						<span class="logo-lg">
@@ -88,67 +85,48 @@
 							<img src="../assets/images/logo-sm.png" alt="" height="24">
 						</span>
 					</a>
-
 					<!--- Sidemenu -->
 					<div id="sidebar-menu">
-					
 						<ul class="metismenu" id="side-menu">
-					
 							<li class="menu-title">基础功能</li>
-					
 							<li>
-								<a href="main.html">
+								<a href="MainServlet">
 									<i class="fe-airplay"></i>
-									<span> 个人主页 </span>
+									<span> 家庭主页 </span>
 								</a>
 							</li>
 							<li>
-								<a href="javascript: void(0);">
-									<i class="fe-cpu"></i>
-									<span> 维护购买订单 </span>
-									<span class="menu-arrow"></span>
-								</a>
-								<ul class="nav-second-level" aria-expanded="false">
-									<li>
-										<a href="add_order.html" onclick="return canuse()">新建订单</a>
-									</li>
-									<li>
-										<a href="order_info.html" onclick="return canuse()">修改订单</a>
-									</li>
-								</ul>
-							</li>
-							<li>
-								<a href="timecard.html">
-									<i class="fe-type"></i>
-									<span> 维护工时卡 </span>
-								</a>
-							</li>
-							<li>
-								<a href="change_method.html">
-									<i class="fe-bar-chart-2"></i>
-									<span> 选择支付方式 </span>
-								</a>
-							</li>
-					
-							<li>
-								<a href="employee_report.html">
+								<a href="DisplayUserServlet">
 									<i class="mdi mdi-account-heart"></i>
-									<span> 生成员工报告</span>
+									<span> 个人信息 </span>
 								</a>
 							</li>
+							<li>
+								<a href="DisplayIncomeServlet">
+									<i class="fe-type"></i>
+									<span> 收入信息 </span>
+								</a>
+							</li>
+							<li>
+								<a href="DisplayExpenseServlet">
+									<i class="fe-bar-chart-2"></i>
+									<span> 支出信息 </span>
+								</a>
+							</li>
+							<li class="menu-title">更多功能</li>
 							<li class="menu-title">高级功能</li>
 							<li>
 								<a href="javascript: void(0);">
-									<i class="fe-cpu"></i>
+									<i class="layui-icon layui-icon-auz"></i>   
 									<span> 管理功能 </span>
 									<span class="menu-arrow"></span>
 								</a>
 								<ul class="nav-second-level" aria-expanded="false">
 									<li>
-										<a href="employee_info.html" onclick="return canuse()">维护员工信息</a>
+										<a href="#" onclick="return canuse()">维护员工信息</a>
 									</li>
 									<li>
-										<a href="admin_report.html" onclick="return canuse()">管理员工报告</a>
+										<a href="#" onclick="return canuse()">管理员工报告</a>
 									</li>
 								</ul>
 							</li>
@@ -243,119 +221,46 @@
 								<div class="card">
 									<div class="card-body">
 										<h4 class="header-title">
-											<过往订单查询>
+											<条件筛选>
 										</h4>
 										<p class="text-muted font-13 mb-4">
 										<form action="SearchExpenseServlet" method="post">
-
-											<span>客户联系方式</span>
+											<!-- <span>手机号</span>
+											<br>
+											<span><input type="text" name="phonenumber" id="pn"
+													class="form-control"></span>
+											<br> -->
+											<span>支出类型</span>
+											<br>
+											<span>
+												<select name="type" data-plugin="customselect">
+													<option value="总工时">总工时</option>
+													<option value="年初至今工资">年初至今工资</option>
+												</select>
+											</span>
+											<br>
+											<br>
+											<span>开始时间</span>
+											<br>
+											<span><input type="text" name="starttime" id="st" placeholder="YYYY-MM-DD"
+													class="form-control"></span>
+											<br>
+											<span>截止时间</span>
+											<br>
+											<span><input type="text" name="endtime" id="et" placeholder="YYYY-MM-DD"
+													class="form-control"></span>
+											<br>
+											<span>员工姓名</span>
 
 											<br>
 											<span><input type="text" name="phonenumber" id="pn"
 													class="form-control"></span>
-
-											<br>
-											<span>商品类别</span>
-
-											<br>
-
-											<span>
-												<select name="kind" data-plugin="customselect">
-													<option value="null">全部</option>
-													<option value="服装">服装</option>
-													<option value="运动">运动</option>
-													<option value="文具">文具</option>
-													<option value="家电">家电</option>
-												</select>
-											</span>
-
-											<br>
-											<br>
-											<span>开始时间</span>
-
-											<br>
-											<span><input type="text" name="starttime" id="st" placeholder="YYYY-MM-DD"
-													class="form-control"></span>
-
-											<br>
-											<span>截止时间</span>
-
-											<br>
-											<span><input type="text" name="endtime" id="et" placeholder="YYYY-MM-DD"
-													class="form-control"></span>
-
 											<br>
 											<span><input type="submit" value="查询"
 													class="btn btn-block btn-primary"></span>
-											<br>
 										</form>
+										<!-- <%-- <code>$().DataTable();</code>. --%> -->
 										</p>
-
-										<table class="layui-table">
-											<thead>
-
-												<tr>
-													<!-- <th>姓名</th> -->
-													<th>客户联系方式</th>
-													<th>客户地址</th>
-													<th>商品名称</th>
-													<th>花费金额</th>
-													<th>日期</th>
-													<th>订单状态</th>
-													<th>操作</th>
-												</tr>
-											</thead>
-											<tbody>
-												<c:choose>
-													<c:when test="${alist=='[]'}">
-													</c:when>
-													<c:otherwise>
-														<c:forEach items="${alist}" var="out">
-															<form action="GetExpenseByID" method="post">
-																<!-- 默认显示最近一条，输出要替换成Golang提取数据的方式 -->
-																<tr>
-																	<td>
-																		<span>${out.name}</span>
-
-																	</td>
-																	<td>
-																		<span>${out.phone}</span>
-																	</td>
-																	<td>
-																		<span>${out.ex_amount}</span>
-																	</td>
-																	<td>
-																		<span>${out.kind}</span>
-																	</td>
-																	<td>
-																		<span>${out.ex_time}</span>
-																	</td>
-																	<td>
-																		<span>${out.ex_note}</span>
-																	</td>
-																	<td>
-																		<input type="submit" value="修改"
-																			class="btn btn-primary btn-sm">
-																		<input type="button" value="删除"
-																			class="btn btn-danger btn-sm"
-																			onclick="deletes(this)">
-																		<input type="hidden" name="eid"
-																			value="${out.eid}" id="eid">
-																	</td>
-																</tr>
-															</form>
-														</c:forEach>
-													</c:otherwise>
-												</c:choose>
-											</tbody>
-										</table>
-
-										<div>
-											<a href="addoutput.jsp">
-												<i class="layui-icon layui-icon-addition"></i>
-											</a>
-										</div>
-
 									</div> <!-- end card body-->
 								</div> <!-- end card -->
 							</div><!-- end col-->
