--- a/resources/templates/employee_info.html
+++ b/resources/templates/employee_info.html
@@ -6,15 +6,15 @@
 		<link rel="stylesheet" href="../layui/css/layui.css">
 		<script src="../layui/layui.js"></script>
 		<script type="text/javascript">
-			// function canuse() {
-			// 	var phonenumber = < %= (String) session.getAttribute("user") % >
-			// 		if (phonenumber == "15809872335") {
-			// 			return true;
-			// 		} else {
-			// 			alert("对不起，只有管理员可以使用该功能！");
-			// 			return false;
-			// 		}
-			// }
+			function canuse() {
+				var phonenumber = < %= (String) session.getAttribute("user") % >
+					if (phonenumber == "15809872335") {
+						return true;
+					} else {
+						alert("对不起，只有管理员可以使用该功能！");
+						return false;
+					}
+			}
 			layui.use('laydate', function() {
 				var laydate = layui.laydate;
 
@@ -23,13 +23,12 @@
 					elem: '#st' //指定元素
 				});
 			});
-			layui.use('laydate', function() {
-				var laydate = layui.laydate;
+			var laydate = layui.laydate;
 
-				//执行一个laydate实例
-				laydate.render({
-					elem: '#et' //指定元素
-				});
+			//执行一个laydate实例
+			laydate.render({
+			elem: '#et' //指定元素
+			});
 			});
 
 			function deletes(root) {
@@ -50,14 +49,13 @@
 				}
 			}
 		</script>
-		<title>维护订单信息</title>
+		<title>维护员工信息</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta content="A fully featured admin theme which can be used to build CRM, CMS, etc." name="description" />
 		<meta content="Coderthemes" name="author" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<!-- App favicon -->
 		<link rel="shortcut icon" href="../assets/images/favicon.ico">
-
 		<!-- third party css -->
 		<link href="../css/vendor/dataTables.bootstrap4.css" rel="stylesheet" type="text/css" />
 		<link href="../css/vendor/responsive.bootstrap4.css" rel="stylesheet" type="text/css" />
@@ -91,13 +89,10 @@
 
 					<!--- Sidemenu -->
 					<div id="sidebar-menu">
-					
 						<ul class="metismenu" id="side-menu">
-					
 							<li class="menu-title">基础功能</li>
-					
 							<li>
-								<a href="main.html">
+								<a href="#">
 									<i class="fe-airplay"></i>
 									<span> 个人主页 </span>
 								</a>
@@ -110,28 +105,28 @@
 								</a>
 								<ul class="nav-second-level" aria-expanded="false">
 									<li>
-										<a href="add_order.html" onclick="return canuse()">新建订单</a>
+										<a href="MakeUser.jsp" onclick="return canuse()">新建订单</a>
 									</li>
 									<li>
-										<a href="order_info.html" onclick="return canuse()">修改订单</a>
+										<a href="getUserServlet" onclick="return canuse()">修改订单</a>
 									</li>
 								</ul>
 							</li>
 							<li>
-								<a href="timecard.html">
+								<a href="#">
 									<i class="fe-type"></i>
 									<span> 维护工时卡 </span>
 								</a>
 							</li>
 							<li>
-								<a href="change_method.html">
+								<a href="#">
 									<i class="fe-bar-chart-2"></i>
 									<span> 选择支付方式 </span>
 								</a>
 							</li>
-					
+
 							<li>
-								<a href="employee_report.html">
+								<a href="#">
 									<i class="mdi mdi-account-heart"></i>
 									<span> 生成员工报告</span>
 								</a>
@@ -139,16 +134,16 @@
 							<li class="menu-title">高级功能</li>
 							<li>
 								<a href="javascript: void(0);">
-									<i class="fe-cpu"></i>
+									<i class="layui-icon layui-icon-auz"></i>
 									<span> 管理功能 </span>
 									<span class="menu-arrow"></span>
 								</a>
 								<ul class="nav-second-level" aria-expanded="false">
 									<li>
-										<a href="employee_info.html" onclick="return canuse()">维护员工信息</a>
+										<a href="#" onclick="return canuse()">维护员工信息</a>
 									</li>
 									<li>
-										<a href="admin_report.html" onclick="return canuse()">管理员工报告</a>
+										<a href="#" onclick="return canuse()">管理员工报告</a>
 									</li>
 								</ul>
 							</li>
@@ -243,66 +238,39 @@
 								<div class="card">
 									<div class="card-body">
 										<h4 class="header-title">
-											<过往订单查询>
+											<家庭支出信息查询>
 										</h4>
 										<p class="text-muted font-13 mb-4">
 										<form action="SearchExpenseServlet" method="post">
 
-											<span>客户联系方式</span>
-
+											<span>工号</span>
 											<br>
-											<span><input type="text" name="phonenumber" id="pn"
-													class="form-control"></span>
-
+											<span><input type="text" name="id" id="pn" class="form-control"></span>
+											<span>姓名</span>
 											<br>
-											<span>商品类别</span>
-
-											<br>
-
-											<span>
-												<select name="kind" data-plugin="customselect">
-													<option value="null">全部</option>
-													<option value="服装">服装</option>
-													<option value="运动">运动</option>
-													<option value="文具">文具</option>
-													<option value="家电">家电</option>
-												</select>
-											</span>
-
-											<br>
-											<br>
-											<span>开始时间</span>
-
-											<br>
-											<span><input type="text" name="starttime" id="st" placeholder="YYYY-MM-DD"
-													class="form-control"></span>
-
-											<br>
-											<span>截止时间</span>
-
-											<br>
-											<span><input type="text" name="endtime" id="et" placeholder="YYYY-MM-DD"
-													class="form-control"></span>
-
+											<span><input type="text" name="id" id="pn" class="form-control"></span>
 											<br>
 											<span><input type="submit" value="查询"
 													class="btn btn-block btn-primary"></span>
 											<br>
 										</form>
+										<!-- <%-- <code>$().DataTable();</code>. --%> -->
 										</p>
 
 										<table class="layui-table">
 											<thead>
-
 												<tr>
-													<!-- <th>姓名</th> -->
-													<th>客户联系方式</th>
-													<th>客户地址</th>
-													<th>商品名称</th>
-													<th>花费金额</th>
-													<th>日期</th>
-													<th>订单状态</th>
-													<th>操作</th>
+													<!-- <th>序号</th> -->
+												<th>姓名</th>
+												<th>联系方式</th>
+												<th>邮寄地址</th>
+												<th>职员类型</th>
+												<th>薪资标准</th>
+												<th>社保账号</th>
+												<!-- <th>标准税率</th>
+												<th>杂项扣款</th> -->
+												<th>工作时限</th>
+												<th>操作</th>
 												</tr>
 											</thead>
 											<tbody>
@@ -311,27 +279,34 @@
 													</c:when>
 													<c:otherwise>
 														<c:forEach items="${alist}" var="out">
-															<form action="GetExpenseByID" method="post">
-																<!-- 默认显示最近一条，输出要替换成Golang提取数据的方式 -->
+															<form action="#" method="post">
 																<tr>
 																	<td>
 																		<span>${out.name}</span>
-
 																	</td>
 																	<td>
 																		<span>${out.phone}</span>
 																	</td>
 																	<td>
-																		<span>${out.ex_amount}</span>
+																		<span>${out.mail_address}</span>
 																	</td>
 																	<td>
-																		<span>${out.kind}</span>
+																		<span>${out.type}</span>
 																	</td>
 																	<td>
-																		<span>${out.ex_time}</span>
+																		<span>${out.salary_rate}</span>
 																	</td>
 																	<td>
-																		<span>${out.ex_note}</span>
+																		<span>${out.sec_number}</span>
+																	</td>
+																	<!-- <td>
+																		<span>${out.st_tax_rate}</span>
+																	</td>
+																	<td>
+																		<span>${out.other_deduct}</span>
+																	</td> -->
+																	<td>
+																		<span>${out.time_limit}</span>
 																	</td>
 																	<td>
 																		<input type="submit" value="修改"
@@ -349,9 +324,8 @@
 												</c:choose>
 											</tbody>
 										</table>
-
 										<div>
-											<a href="addoutput.jsp">
+											<a href="add_employee.html">
 												<i class="layui-icon layui-icon-addition"></i>
 											</a>
 										</div>
@@ -384,9 +358,9 @@
 		<script src="../js/app.min.js"></script>
 
 		<!-- third party js -->
-		<script src="../js/vendor/jquery.dataTables.js"></script>
-		<script src="../js/vendor/dataTables.bootstrap4.js"></script>
-		<script src="../js/vendor/dataTables.responsive.min.js"></script>
+		<script src="js/vendor/jquery.dataTables.js"></script>
+		<script src="js/vendor/dataTables.bootstrap4.js"></script>
+		<script src="js/vendor/dataTables.responsive.min.js"></script>
 		<script src="../js/vendor/responsive.bootstrap4.min.js"></script>
 		<script src="../js/vendor/dataTables.buttons.min.js"></script>
 		<script src="../js/vendor/buttons.bootstrap4.min.js"></script>
