--- a/resources/templates/main.html
+++ b/resources/templates/main.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html lang="en">
 
-<head>
-	<meta charset="utf-8" />
-	<title>家庭经济管理系统</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- <meta content <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">> -->
-
-	<html lang="en">
-
 	<head>
 		<meta charset="utf-8" />
-		<title>Simulor - Responsive Admin Dashboard Template</title>
+		<title>家庭经济管理系统</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta content="A fully featured admin theme which can be used to build CRM, CMS, etc." name="description" />
-		<meta content="Coderthemes" name="author" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<!-- App favicon -->
-		<link rel="shortcut icon" href="/resources/assets/images/favicon.ico">
-		<script type="text/javascript">
+		<!-- <meta content <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">> -->
+
+		<html lang="en">
+
+			<head>
+				<meta charset="utf-8" />
+				<title>系统首页</title>
+				<meta name="viewport" content="width=device-width, initial-scale=1.0">
+				<meta content="A fully featured admin theme which can be used to build CRM, CMS, etc."
+					name="description" />
+				<meta content="Coderthemes" name="author" />
+				<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+				<!-- App favicon -->
+				<link rel="shortcut icon" href="/resources/assets/images/favicon.ico">
+				<script type="text/javascript">
 					// function canuse(){
 					// 	var phonenumber = <%=(String)session.getAttribute("user") %>
 					// 	if(phonenumber=="15809872335"){
@@ -29,200 +30,193 @@
 					// 	}
 					// }
 					//
-		</script>
-		<!-- App css -->
-		<link href="/resources/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-		<link href="/resources/css/icons.min.css" rel="stylesheet" type="text/css" />
-		<link href="/resources/css/app.min.css" rel="stylesheet" type="text/css" />
-		<style type="text/css">
-			.card-body>ul {
-				list-style: none;
-			}
+				</script>
+				<!-- App css -->
+				<link href="/resources/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+				<link href="/resources/css/icons.min.css" rel="stylesheet" type="text/css" />
+				<link href="/resources/css/app.min.css" rel="stylesheet" type="text/css" />
+				<style type="text/css">
+					.card-body>ul {
+						list-style: none;
+					}
 
-			.card-body>ul>li {
-				position: absolute;
-				left: 200px;
-				top: 100px;
-				width: 100%;
-				height: 484px;
-			}
-		</style>
-	</head>
+					.card-body>ul>li {
+						position: absolute;
+						left: 200px;
+						top: 100px;
+						width: 100%;
+						height: 484px;
+					}
+				</style>
+			</head>
 
-<body>
+	<body>
 
-	<!-- Begin page -->
-	<div id="wrapper">
+		<!-- Begin page -->
+		<div id="wrapper">
 
-		<!-- ========== Left Sidebar Start ========== -->
-		<div class="left-side-menu">
+			<!-- ========== Left Sidebar Start ========== -->
+			<div class="left-side-menu">
 
-			<div class="slimscroll-menu">
+				<div class="slimscroll-menu">
 
-				<!-- LOGO -->
-				<a href="#" class="logo text-center mb-4">
-					<span class="logo-lg">
-						<img src="/resources/assets/images/logo.png" alt="" height="50">
-					</span>
-					<span class="logo-sm">
-						<img src="/resources/assets/images/logo-sm.png" alt="" height="24">
-					</span>
-				</a>
+					<!-- LOGO -->
+					<a href="#" class="logo text-center mb-4">
+						<span class="logo-lg">
+							<img src="/resources/assets/images/logo.png" alt="" height="50">
+						</span>
+						<span class="logo-sm">
+							<img src="/resources/assets/images/logo-sm.png" alt="" height="24">
+						</span>
+					</a>
 
-				<!--- Sidemenu -->
-				<div id="sidebar-menu">
+					<!--- Sidemenu -->
+					<div id="sidebar-menu">
+						<ul class="metismenu" id="side-menu">
+							<li class="menu-title">基础功能</li>
+							<li>
+								<a href="main.html">
+									<i class="fe-airplay"></i>
+									<span> 个人主页 </span>
+								</a>
+							</li>
+							<li>
+								<a href="javascript: void(0);">
+									<i class="fe-cpu"></i>
+									<span> 维护购买订单 </span>
+									<span class="menu-arrow"></span>
+								</a>
+								<ul class="nav-second-level" aria-expanded="false">
+									<li>
+										<a href="add_order.html" onclick="return canuse()">新建订单</a>
+									</li>
+									<li>
+										<a href="order_info.html" onclick="return canuse()">修改订单</a>
+									</li>
+								</ul>
+							</li>
+							<li>
+								<a href="timecard.html">
+									<i class="fe-type"></i>
+									<span> 维护工时卡 </span>
+								</a>
+							</li>
+							<li>
+								<a href="change_method.html">
+									<i class="fe-bar-chart-2"></i>
+									<span> 选择支付方式 </span>
+								</a>
+							</li>
 
-					<ul class="metismenu" id="side-menu">
+							<li>
+								<a href="employee_report.html">
+									<i class="mdi mdi-account-heart"></i>
+									<span> 生成员工报告</span>
+								</a>
+							</li>
+							<li class="menu-title">高级功能</li>
+							<li>
+								<a href="javascript: void(0);">
+									<i class="fe-cpu"></i>
+									<span> 管理功能 </span>
+									<span class="menu-arrow"></span>
+								</a>
+								<ul class="nav-second-level" aria-expanded="false">
+									<li>
+										<a href="employee_info.html" onclick="return canuse()">维护员工信息</a>
+									</li>
+									<li>
+										<a href="admin_report.html" onclick="return canuse()">管理员工报告</a>
+									</li>
+								</ul>
+							</li>
+						</ul>
+					</div>
+					<!-- End Sidebar -->
 
-						<li class="menu-title">基础功能</li>
-
-						<li>
-							<a href="#">
-								<i class="fe-airplay"></i>
-								<span> 个人主页 </span>
-							</a>
-						</li>
-						<li>
-							<a href="javascript: void(0);">
-								<i class="fe-cpu"></i>
-								<span> 维护购买订单 </span>
-								<span class="menu-arrow"></span>
-							</a>
-							<ul class="nav-second-level" aria-expanded="false">
-								<li>
-									<a href="MakeUser.jsp" onclick="return canuse()">新建订单</a>
-								</li>
-								<li>
-									<a href="getUserServlet" onclick="return canuse()">修改订单</a>
-								</li>
-							</ul>
-						</li>
-
-
-
-						<li>
-							<a href="#">
-								<i class="fe-type"></i>
-								<span> 维护工时卡 </span>
-							</a>
-						</li>
-
-
-
-						<li>
-							<a href="#">
-								<i class="fe-bar-chart-2"></i>
-								<span> 选择支付方式 </span>
-							</a>
-						</li>
-
-						<li>
-							<a href="#">
-								<i class="mdi mdi-account-heart"></i>
-								<span> 生成员工报告</span>
-							</a>
-						</li>
-
-						<li class="menu-title">更多功能</li>
-
-
-
-						<li>
-							<a href="StockLogin.jsp">
-								<i class="fe-map"></i>
-								<span> 财务管理 </span>
-							</a>
-						</li>
-
-
-					</ul>
+					<div class="clearfix"></div>
 
 				</div>
-				<!-- End Sidebar -->
-
-				<div class="clearfix"></div>
+				<!-- Sidebar -left -->
 
 			</div>
-			<!-- Sidebar -left -->
+			<!-- Left Sidebar End -->
 
-		</div>
-		<!-- Left Sidebar End -->
+			<!-- ============================================================== -->
+			<!-- Start Page Content here -->
+			<!-- ============================================================== -->
 
-		<!-- ============================================================== -->
-		<!-- Start Page Content here -->
-		<!-- ============================================================== -->
+			<div class="content-page">
+				<div class="content">
 
-		<div class="content-page">
-			<div class="content">
-
-				<!-- Topbar Start -->
-				<div class="navbar-custom">
-					<ul class="list-unstyled topbar-right-menu float-right mb-0">
-						<li class="dropdown notification-list">
-							<a class="nav-link dropdown-toggle nav-user mr-0" data-toggle="dropdown" href="#"
-								role="button" aria-haspopup="false" aria-expanded="false">
-								<img src="/resources/assets/images/users/avatar-1.jpg" alt="user-image"
-									class="rounded-circle">
-								<small class="pro-user-name ml-1">
-									{{.showUsername}}
-								</small>
-							</a>
-							<div class="dropdown-menu dropdown-menu-right dropdown-menu-animated profile-dropdown ">
-								<!-- item-->
-								<div class="dropdown-header noti-title">
-									<h6 class="text-overflow m-0">Welcome !</h6>
-								</div>
-
-								<!-- item-->
-								<a href="javascript:void(0);" class="dropdown-item notify-item">
-									<i class="fe-user"></i>
-									<span>My Account</span>
+					<!-- Topbar Start -->
+					<div class="navbar-custom">
+						<ul class="list-unstyled topbar-right-menu float-right mb-0">
+							<li class="dropdown notification-list">
+								<a class="nav-link dropdown-toggle nav-user mr-0" data-toggle="dropdown" href="#"
+									role="button" aria-haspopup="false" aria-expanded="false">
+									<img src="/resources/assets/images/users/avatar-1.jpg" alt="user-image"
+										class="rounded-circle">
+									<small class="pro-user-name ml-1">
+										{{.showUsername}}
+									</small>
 								</a>
+								<div class="dropdown-menu dropdown-menu-right dropdown-menu-animated profile-dropdown ">
+									<!-- item-->
+									<div class="dropdown-header noti-title">
+										<h6 class="text-overflow m-0">Welcome !</h6>
+									</div>
 
-								<!-- item-->
-								<a href="javascript:void(0);" class="dropdown-item notify-item">
-									<i class="fe-settings"></i>
-									<span>Settings</span>
-								</a>
+									<!-- item-->
+									<a href="javascript:void(0);" class="dropdown-item notify-item">
+										<i class="fe-user"></i>
+										<span>My Account</span>
+									</a>
 
-								<!-- item-->
-								<a href="javascript:void(0);" class="dropdown-item notify-item">
-									<i class="fe-lock"></i>
-									<span>Lock Screen</span>
-								</a>
+									<!-- item-->
+									<a href="javascript:void(0);" class="dropdown-item notify-item">
+										<i class="fe-settings"></i>
+										<span>Settings</span>
+									</a>
 
-								<div class="dropdown-divider"></div>
+									<!-- item-->
+									<a href="javascript:void(0);" class="dropdown-item notify-item">
+										<i class="fe-lock"></i>
+										<span>Lock Screen</span>
+									</a>
 
-								<!-- item-->
-								<a href="LogoutServlet" class="dropdown-item notify-item">
-									<i class="fe-log-out"></i>
-									<span>Logout</span>
-								</a>
+									<div class="dropdown-divider"></div>
 
-							</div>
-						</li>
-
-					</ul>
-					<button class="button-menu-mobile open-left disable-btn">
-						<i class="fe-menu"></i>
-					</button>
-					<div class="app-search">
-						<form>
-							<div class="input-group">
-								<input type="text" class="form-control" placeholder="No Search..." disabled>
-								<div class="input-group-append">
+									<!-- item-->
+									<a href="LogoutServlet" class="dropdown-item notify-item">
+										<i class="fe-log-out"></i>
+										<span>Logout</span>
+									</a>
 
 								</div>
-							</div>
-						</form>
+							</li>
+
+						</ul>
+						<button class="button-menu-mobile open-left disable-btn">
+							<i class="fe-menu"></i>
+						</button>
+						<div class="app-search">
+							<form>
+								<div class="input-group">
+									<input type="text" class="form-control" placeholder="No Search..." disabled>
+									<div class="input-group-append">
+
+									</div>
+								</div>
+							</form>
+						</div>
 					</div>
-				</div>
-				<!-- end Topbar -->
-				<!-- Start Content-->
-				<div class="container-fluid">
+					<!-- end Topbar -->
+					<!-- Start Content-->
+					<div class="container-fluid">
 
-					<!-- start page title -->
-					<!-- <div class="row">
+						<!-- start page title -->
+						<!-- <div class="row">
                             <div class="col-12">
                                 <div class="page-title-box">
                                     <div class="page-title-right">
@@ -235,97 +229,97 @@
                                 </div>
                             </div>
                         </div>     -->
-					<!-- end page title -->
-					<div class="row">
-						<div class="col-12">
-							<!-- <div class="card"> -->
-							<div class="card-body" id="banner">
-								<ul>
-									<li><img src="/resources/assets/images/banner2.jpg" /></li>
-									<li><img src="/resources/assets/images/banner3.jpg" /></li>
-									<li><img src="/resources/assets/images/banner4.jpg" /></li>
-									<li><img src="/resources/assets/images/banner1.jpg" /></li>
-									<li><img src="/resources/assets/images/banner5.jpg" /></li>
-									<li><img src="/resources/assets/images/banner6.jpg" /></li>
-								</ul>
+						<!-- end page title -->
+						<div class="row">
+							<div class="col-12">
+								<!-- <div class="card"> -->
+								<div class="card-body" id="banner">
+									<ul>
+										<li><img src="/resources/assets/images/banner2.jpg" /></li>
+										<li><img src="/resources/assets/images/banner3.jpg" /></li>
+										<li><img src="/resources/assets/images/banner4.jpg" /></li>
+										<li><img src="/resources/assets/images/banner1.jpg" /></li>
+										<li><img src="/resources/assets/images/banner5.jpg" /></li>
+										<li><img src="/resources/assets/images/banner6.jpg" /></li>
+									</ul>
+								</div>
 							</div>
 						</div>
+						<form action="/updatePay" method="post">
+							<div>
+								<label for="updatePay">Update Payment Method</label>
+								<select name="updatePay" id="updatePay">
+									<option value="pick_up">pickup</option>
+									<option value="mail">mail</option>
+									<option value="deposit">deposit</option>
+								</select>
+
+								<p></p>
+
+								<button type="submit">
+									submit
+								</button>
+							</div>
+						</form>
 					</div>
-					<form action="/updatePay" method="post">
-						<div>
-							<label for="updatePay">Update Payment Method</label>
-							<select name="updatePay" id="updatePay">
-								<option value="pick_up">pickup</option>
-								<option value="mail">mail</option>
-								<option value="deposit">deposit</option>
-							</select>
+					<script type="application/javascript">
+						main();
 
-							<p></p>
+						function main() {
+							var obj1 = document.getElementById('banner');
+							var li = obj1.getElementsByTagName('li');
+							var j = 0;
+							var iIndex = 1;
+							var timer;
 
-							<button type="submit">
-								submit
-							</button>
-						</div>
-					</form>
-				</div>
-				<script type="application/javascript">
-					main();
-
-					function main() {
-						var obj1 = document.getElementById('banner');
-						var li = obj1.getElementsByTagName('li');
-						var j = 0;
-						var iIndex = 1;
-						var timer;
-
-						for (var i = 0; i < li.length; i++) {
-							console.log(i, j);
-							if (i == j) {
-								li[i].style.opacity = '1';
-								continue;
-							}
-							li[i].style.opacity = '0';
-						}
-
-						function startRoll() {
-							j++;
-							if (j >= li.length) {
-								j = 0;
-							}
-							li[j].style.zIndex = iIndex;
-							iIndex++;
-							fadeIn(li[j], 1);
-						};
-
-						function fadeIn(obj, period) {
-							var COUNT = 50;
-							clearInterval(obj.timer);
-							obj.timer = setInterval(function () {
-								var opacityValue = Number.parseFloat(obj.style.opacity);
-								opacityValue += period / COUNT;
-								if (opacityValue < 1) {
-									obj.style.opacity = opacityValue;
-								} else {
-									obj.style.opacity = 1;
-									clearInterval(obj.timer);
-									for (var i = 0; i < li.length; i++) {
-										if (i == j) {
-											continue;
-										}
-										li[i].style.opacity = '0';
-									}
+							for (var i = 0; i < li.length; i++) {
+								console.log(i, j);
+								if (i == j) {
+									li[i].style.opacity = '1';
+									continue;
 								}
-							}, 1000 / COUNT);
+								li[i].style.opacity = '0';
+							}
+
+							function startRoll() {
+								j++;
+								if (j >= li.length) {
+									j = 0;
+								}
+								li[j].style.zIndex = iIndex;
+								iIndex++;
+								fadeIn(li[j], 1);
+							};
+
+							function fadeIn(obj, period) {
+								var COUNT = 50;
+								clearInterval(obj.timer);
+								obj.timer = setInterval(function() {
+									var opacityValue = Number.parseFloat(obj.style.opacity);
+									opacityValue += period / COUNT;
+									if (opacityValue < 1) {
+										obj.style.opacity = opacityValue;
+									} else {
+										obj.style.opacity = 1;
+										clearInterval(obj.timer);
+										for (var i = 0; i < li.length; i++) {
+											if (i == j) {
+												continue;
+											}
+											li[i].style.opacity = '0';
+										}
+									}
+								}, 1000 / COUNT);
+							}
+
+							timer = setInterval(startRoll, 3500);
 						}
-
-						timer = setInterval(startRoll, 3500);
-					}
-				</script>
+					</script>
 
 
 
 
-				<!-- <div id="record-map">
+					<!-- <div id="record-map">
 						<ul>
 							<li><img src="img/banner1.jpg"/></li>
 							<li><img src="img/banner2.jpg"/></li>
@@ -335,50 +329,50 @@
 							<li><img src="img/banner6.jpg"/></li>
 						</ul>
 					</div> -->
-				<!-- Footer Start -->
-				<footer class="footer">
-					<div class="container-fluid">
-						<div class="row">
-							<div class="col-md-6">
-								Happy Working! &copy; 2021 - JLU.edu
-							</div>
-							<div class="col-md-6">
-								<div class="text-md-right footer-links d-none d-sm-block">
-									<a href="#">LP</a>
-									<a href="#">LZY</a>
-									<a href="#">CYZ</a>
-									<a href="#">LH</a>
-									<a href="#">LW</a>
+					<!-- Footer Start -->
+					<footer class="footer">
+						<div class="container-fluid">
+							<div class="row">
+								<div class="col-md-6">
+									Happy Working! &copy; 2021 - JLU.edu
+								</div>
+								<div class="col-md-6">
+									<div class="text-md-right footer-links d-none d-sm-block">
+										<a href="#">LP</a>
+										<a href="#">LZY</a>
+										<a href="#">CYZ</a>
+										<a href="#">LH</a>
+										<a href="#">LW</a>
+									</div>
 								</div>
 							</div>
 						</div>
-					</div>
-				</footer>
-				<!-- end Footer -->
+					</footer>
+					<!-- end Footer -->
+
+				</div>
+
+				<!-- ============================================================== -->
+				<!-- End Page content -->
+				<!-- ============================================================== -->
+
 
 			</div>
-
-			<!-- ============================================================== -->
-			<!-- End Page content -->
-			<!-- ============================================================== -->
+			<!-- END wrapper -->
 
 
-		</div>
-		<!-- END wrapper -->
+			<!-- App js -->
+			<script src="/resources/js/vendor.min.js"></script>
+			<script src="/resources/js/app.min.js"></script>
 
+			<!-- Plugins js -->
+			<script src="/resources/js/vendor/Chart.bundle.js"></script>
+			<script src="/resources/js/vendor/jquery.sparkline.min.js"></script>
+			<script src="/resources/js/vendor/jquery.knob.min.js"></script>
 
-		<!-- App js -->
-		<script src="/resources/js/vendor.min.js"></script>
-		<script src="/resources/js/app.min.js"></script>
+			<script src="/resources/js/pages/dashboard.init.js"></script>
+			<!-- record map -->
 
-		<!-- Plugins js -->
-		<script src="/resources/js/vendor/Chart.bundle.js"></script>
-		<script src="/resources/js/vendor/jquery.sparkline.min.js"></script>
-		<script src="/resources/js/vendor/jquery.knob.min.js"></script>
-
-		<script src="/resources/js/pages/dashboard.init.js"></script>
-		<!-- record map -->
-
-</body>
+	</body>
 
 </html>
