--- a/resources/templates/main.html
+++ b/resources/templates/main.html
@@ -88,28 +88,28 @@
 								</a>
 								<ul class="nav-second-level" aria-expanded="false">
 									<li>
-										<a href="add_order.html" onclick="return canuse()">新建订单</a>
+										<a href="/resources/templates/add_order.html" onclick="return canuse()">新建订单</a>
 									</li>
 									<li>
-										<a href="order_info.html" onclick="return canuse()">修改订单</a>
+										<a href="/resources/templates/order_info.html" onclick="return canuse()">修改订单</a>
 									</li>
 								</ul>
 							</li>
 							<li>
-								<a href="timecard.html">
+								<a href="/timecard">
 									<i class="fe-type"></i>
 									<span> 维护工时卡 </span>
 								</a>
 							</li>
 							<li>
-								<a href="change_method.html">
+								<a href="/resources/templates/change_method.html">
 									<i class="fe-bar-chart-2"></i>
 									<span> 选择支付方式 </span>
 								</a>
 							</li>
 
 							<li>
-								<a href="employee_report.html">
+								<a href="/resources/templates/employee_report.html">
 									<i class="mdi mdi-account-heart"></i>
 									<span> 生成员工报告</span>
 								</a>
@@ -123,10 +123,10 @@
 								</a>
 								<ul class="nav-second-level" aria-expanded="false">
 									<li>
-										<a href="employee_info.html" onclick="return canuse()">维护员工信息</a>
+										<a href="/resources/templates/employee_info.html" onclick="return canuse()">维护员工信息</a>
 									</li>
 									<li>
-										<a href="admin_report.html" onclick="return canuse()">管理员工报告</a>
+										<a href="/resources/templates/admin_report.html" onclick="return canuse()">管理员工报告</a>
 									</li>
 								</ul>
 							</li>
