done with add purchase order

--- a/resources/templates/main.html
+++ b/resources/templates/main.html
@@ -88,7 +88,7 @@
 								</a>
 								<ul class="nav-second-level" aria-expanded="false">
 									<li>
-										<a href="/resources/templates/add_order.html" onclick="return canuse()">新建订单</a>
+										<a href="/showOrder" onclick="return canuse()">新建订单</a>
 									</li>
 									<li>
 										<a href="/resources/templates/order_info.html" onclick="return canuse()">修改订单</a>
